--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,14 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.jakewharton.timber:timber:4.1.2'
+    compile 'io.reactivex:rxjava:1.1.3'
     provided 'org.projectlombok:lombok:1.16.6'
 
     testCompile 'org.robospock:robospock:1.0.0'
     testCompile 'cglib:cglib-nodep:2.2.2'
     testCompile 'org.objenesis:objenesis:2.2'
+    testCompile 'io.reactivex:rxjava-debug:1.0.3'
+    testCompile 'io.reactivex:rxjava:1.1.3'
 
     androidTestCompile 'org.codehaus.groovy:groovy:2.4.3:grooid'
     androidTestCompile('org.spockframework:spock-core:1.0-groovy-2.4') {
